// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image storyshots blocks Block Alert 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-alert v-sheet theme--light"
              role="alert"
              style="background-color: rgb(232, 246, 255); border-color: #e8f6ff; --shadow: #2b72bd33; --icon-color: #2B72BD;"
            >
              <div
                class="v-alert__wrapper"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate v-alert__icon material-icons theme--light"
                >
                  info
                </i>
                <div
                  class="v-alert__content"
                >
                  <h3
                    class="title"
                  >
                    
                  </h3>
                   
                  <p
                    class="description"
                  >
                    Lorem ipsum dolor sit amet
                  </p>
                   
                </div>
                <button
                  aria-label="Закрыть"
                  class="v-alert__dismissible v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--small"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light"
                    >
                      cancel
                    </i>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots bottom-sheets Simple 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div>
              <div
                class="v-input v-input--hide-details v-input--is-readonly theme--light v-text-field v-text-field--enclosed v-text-field--outlined c-input"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                    style="height: 56px;"
                  >
                    <fieldset
                      aria-hidden="true"
                    >
                      <legend
                        style="width: 0px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                    <div
                      class="v-text-field__slot"
                    >
                      <input
                        id="input-20"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
               
              <input
                name=""
                type="hidden"
                value="asdf"
              />
               
              <div
                class="v-dialog__container"
                role="dialog"
              >
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots buttons Add Button 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <button
              class="v-btn v-btn--bottom v-btn--contained v-btn--fab v-btn--fixed v-btn--right v-btn--round theme--dark v-size--default primary"
              forever="true"
              transition="slide-y-reverse-transition"
              type="button"
            >
              <span
                class="v-btn__content"
              >
                <svg
                  aria-labelledby="plus--bold"
                  class="icon icon-plus--bold"
                  fill=""
                  focusable="false"
                  name="plus--bold"
                  role="img"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots buttons Copy Button 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <button
              class="u-text-small v-btn v-btn--flat v-btn--text theme--light v-size--default"
              copytext="Hello, world!"
              message="Скопировать"
              type="button"
            >
              <span
                class="v-btn__content"
              >
                Скопировать
              </span>
            </button>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots buttons Fake Button 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <button
              class="c-fake-btn"
              type="button"
            >
              <span
                class="c-fake-btn__inner"
              >
                <!---->
                 
                <!---->
              </span>
               
              <svg
                aria-labelledby="angle"
                class="c-fake-btn__icon icon icon-angle icon--xs"
                fill=""
                focusable="false"
                name="angle"
                role="img"
                xmlns="http://www.w3.org/2000/svg"
                xs="true"
              >
                <use
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots buttons Wide Button 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <button
              class="btn-wide"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light primary--text"
                style="font-size: 28px; margin-right: 12px;"
              >
                add_circle
              </i>
               
              <div
                class="spacer"
              />
              
    

            </button>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/inputs Password 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--placeholder c-input"
              color="info"
              errormessages=""
              height="56"
              hint=""
              maxlength="auto"
              placeholder="Введите пароль"
              value="password"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="height: 56px;"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label v-label--active theme--light"
                      for="input-79"
                      style="left: 0px; position: absolute;"
                    >
                      Пароль
                    </label>
                    <input
                      id="input-79"
                      name="password"
                      placeholder="Введите пароль"
                      type="password"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <button
                        aria-label="append icon"
                        class="v-icon notranslate v-icon--link material-icons theme--light"
                        type="button"
                      >
                        visibility
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/inputs Phone 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-input theme--light v-text-field v-text-field--placeholder c-input"
              color="info"
              errormessages=""
              height="56"
              hint=""
              maxlength="5"
              placeholder="Введите телефон"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="height: 56px;"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label v-label--active theme--light"
                      for="input-90"
                      style="left: 0px; position: absolute;"
                    >
                      Телефон
                    </label>
                    <input
                      id="input-90"
                      placeholder="Введите телефон"
                      type="tel"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/inputs Search 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-input theme--light v-text-field v-text-field--placeholder c-input"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="height: 56px;"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label v-label--active theme--light"
                      for="input-99"
                      style="left: 0px; position: absolute;"
                    >
                      Поиск
                    </label>
                    <input
                      id="input-99"
                      placeholder="Введите поисковый запрос"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light"
                      >
                        search
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/inputs Security Code 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="c-security-code"
            >
              <div
                class="c-security-code__inner"
              >
                <label
                  class="c-security-code__field"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    maxlength="1"
                    spellcheck="false"
                    style="--bg: #F7F7F8;"
                    type="tel"
                  />
                </label>
                <label
                  class="c-security-code__field"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    maxlength="1"
                    spellcheck="false"
                    style="--bg: #F7F7F8;"
                    type="tel"
                  />
                </label>
                <label
                  class="c-security-code__field"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    maxlength="1"
                    spellcheck="false"
                    style="--bg: #F7F7F8;"
                    type="tel"
                  />
                </label>
                <label
                  class="c-security-code__field"
                >
                  <input
                    autocapitalize="off"
                    autocomplete="off"
                    autocorrect="off"
                    maxlength="1"
                    spellcheck="false"
                    style="--bg: #F7F7F8;"
                    type="tel"
                  />
                </label>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/inputs Simple 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-input theme--light v-text-field v-text-field--placeholder c-input"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="height: 56px;"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label v-label--active theme--light"
                      for="input-69"
                      style="left: 0px; position: absolute;"
                    >
                      Текст
                    </label>
                    <input
                      id="input-69"
                      placeholder="Введите текст"
                      type="text"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/selection-controls Beauty Switch 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-input theme--light v-input--selection-controls v-input--switch"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      id="input-154"
                      role="switch"
                      type="checkbox"
                      value="0"
                    />
                    <div
                      class="v-input--selection-controls__ripple"
                    />
                    <div
                      class="v-input--switch__track theme--light"
                    />
                    <div
                      class="v-input--switch__thumb theme--light"
                    >
                      <!---->
                    </div>
                  </div>
                  <label
                    class="v-label theme--light"
                    for="input-154"
                    style="left: 0px; position: relative;"
                  >
                    Переключатель
                  </label>
                </div>
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/selection-controls Checkbox 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-input theme--light v-input--selection-controls v-input--checkbox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-input--selection-controls__input"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light"
                    >
                      check_box_outline_blank
                    </i>
                    <input
                      aria-checked="false"
                      id="input-116"
                      role="checkbox"
                      type="checkbox"
                      value=""
                    />
                    <div
                      class="v-input--selection-controls__ripple"
                    />
                  </div>
                  <label
                    class="v-label theme--light"
                    for="input-116"
                    style="left: 0px; position: relative;"
                  >
                    Элемент 1
                  </label>
                </div>
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/selection-controls Radio Genders 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-input theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--row"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="height: auto;"
                >
                  <div
                    aria-labelledby="input-127"
                    class="v-input--radio-group__input"
                    role="radiogroup"
                  >
                    <div
                      class="v-radio theme--light v-item--active"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate material-icons theme--light primary--text"
                        >
                          radio_button_checked
                        </i>
                        <input
                          aria-checked="true"
                          id="input-128"
                          name="radio-127"
                          role="radio"
                          type="radio"
                          value="0"
                        />
                        <div
                          class="v-input--selection-controls__ripple primary--text"
                        />
                      </div>
                      <label
                        class="v-label theme--light"
                        for="input-128"
                        style="left: 0px; position: relative;"
                      >
                        Мужской
                      </label>
                    </div>
                    <div
                      class="v-radio theme--light"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate material-icons theme--light"
                        >
                          radio_button_unchecked
                        </i>
                        <input
                          aria-checked="false"
                          id="input-130"
                          name="radio-127"
                          role="radio"
                          type="radio"
                          value="1"
                        />
                        <div
                          class="v-input--selection-controls__ripple"
                        />
                      </div>
                      <label
                        class="v-label theme--light"
                        for="input-130"
                        style="left: 0px; position: relative;"
                      >
                        Женский
                      </label>
                    </div>
                    <div
                      class="v-radio theme--light"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate material-icons theme--light"
                        >
                          radio_button_unchecked
                        </i>
                        <input
                          aria-checked="false"
                          id="input-132"
                          name="radio-127"
                          role="radio"
                          type="radio"
                          value="2"
                        />
                        <div
                          class="v-input--selection-controls__ripple"
                        />
                      </div>
                      <label
                        class="v-label theme--light"
                        for="input-132"
                        style="left: 0px; position: relative;"
                      >
                        Небинарный
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/selection-controls Rating 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-rating"
            >
              <button
                class="v-icon notranslate v-icon--link material-icons theme--light grey--text text--lighten-2"
                tabindex="-1"
                type="button"
              >
                star
              </button>
              <button
                class="v-icon notranslate v-icon--link material-icons theme--light grey--text text--lighten-2"
                tabindex="-1"
                type="button"
              >
                star
              </button>
              <button
                class="v-icon notranslate v-icon--link material-icons theme--light grey--text text--lighten-2"
                tabindex="-1"
                type="button"
              >
                star
              </button>
              <button
                class="v-icon notranslate v-icon--link material-icons theme--light grey--text text--lighten-2"
                tabindex="-1"
                type="button"
              >
                star
              </button>
              <button
                class="v-icon notranslate v-icon--link material-icons theme--light grey--text text--lighten-2"
                tabindex="-1"
                type="button"
              >
                star
              </button>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/selects Auto Complete 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-input v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select v-autocomplete c-select c-select--clearable"
            >
              <div
                class="v-input__control"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="list-164"
                  class="v-input__slot"
                  role="combobox"
                  style="height: 56px;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-select__slot"
                  >
                    <label
                      class="v-label theme--light"
                      for="input-164"
                      style="left: 0px; position: absolute;"
                    >
                      Выберите элементы
                    </label>
                    <input
                      autocomplete="off"
                      id="input-164"
                      type="text"
                    />
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--clear"
                      >
                        <button
                          aria-label="clear icon"
                          class="v-icon notranslate v-icon--disabled v-icon--link material-icons theme--light"
                          disabled="disabled"
                          type="button"
                        >
                          clear
                        </button>
                      </div>
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <input
                      type="hidden"
                    />
                  </div>
                  <div
                    class="v-menu"
                  >
                    <!---->
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/selects Birthday 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-input"
              label="test"
            >
              <div
                class="row"
              >
                <div
                  class="py-0 col"
                >
                  <div
                    class="v-input v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select v-autocomplete c-select c-select--clearable"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="list-184"
                        class="v-input__slot"
                        role="combobox"
                        style="height: 56px;"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-select__slot"
                        >
                          <label
                            class="v-label theme--light"
                            for="input-184"
                            style="left: 0px; position: absolute;"
                          >
                            День
                          </label>
                          <input
                            autocomplete="off"
                            id="input-184"
                            type="text"
                          />
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--clear"
                            >
                              <button
                                aria-label="clear icon"
                                class="v-icon notranslate v-icon--disabled v-icon--link material-icons theme--light"
                                disabled="disabled"
                                type="button"
                              >
                                clear
                              </button>
                            </div>
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate material-icons theme--light"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                          <input
                            type="hidden"
                          />
                        </div>
                        <div
                          class="v-menu"
                        >
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="py-0 col"
                >
                  <div
                    class="v-input v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select v-autocomplete c-select c-select--clearable"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="list-188"
                        class="v-input__slot"
                        role="combobox"
                        style="height: 56px;"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-select__slot"
                        >
                          <label
                            class="v-label theme--light"
                            for="input-188"
                            style="left: 0px; position: absolute;"
                          >
                            Месяц
                          </label>
                          <input
                            autocomplete="off"
                            id="input-188"
                            type="text"
                          />
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--clear"
                            >
                              <button
                                aria-label="clear icon"
                                class="v-icon notranslate v-icon--disabled v-icon--link material-icons theme--light"
                                disabled="disabled"
                                type="button"
                              >
                                clear
                              </button>
                            </div>
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate material-icons theme--light"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                          <input
                            type="hidden"
                          />
                        </div>
                        <div
                          class="v-menu"
                        >
                          <!---->
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="d-flex align-center py-0 col"
                >
                  <button
                    class="u-text-small u-text-weight--normal like-link pa-0 v-btn v-btn--depressed v-btn--disabled v-btn--flat v-btn--text theme--light v-size--large"
                    disabled="disabled"
                    type="button"
                  >
                    <span
                      class="v-btn__content"
                    >
                      
                    Выбрать год
                
                    </span>
                  </button>
                </div>
                 
                <input
                  name="birthday"
                  type="hidden"
                  value="null.null.null"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/selects Gender 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-input v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
            >
              <div
                class="v-input__control"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="list-199"
                  class="v-input__slot"
                  role="button"
                  style="height: 56px;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-select__slot"
                  >
                    <label
                      class="v-label theme--light"
                      for="input-199"
                      style="left: 0px; position: absolute;"
                    >
                      Пол
                    </label>
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="off"
                        id="input-199"
                        lable="test"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <input
                      type="hidden"
                    />
                  </div>
                  <div
                    class="v-menu"
                  >
                    <!---->
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/selects Simple 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-input v-input--hide-details v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
            >
              <div
                class="v-input__control"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="list-174"
                  class="v-input__slot"
                  role="button"
                  style="height: 56px;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-select__slot"
                  >
                    <label
                      class="v-label theme--light"
                      for="input-174"
                      style="left: 0px; position: absolute;"
                    >
                      Выберите элемент
                    </label>
                    <div
                      class="v-select__selections"
                    >
                      <input
                        aria-readonly="false"
                        autocomplete="off"
                        id="input-174"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon notranslate material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <input
                      type="hidden"
                    />
                  </div>
                  <div
                    class="v-menu"
                  >
                    <!---->
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/textareas Simple 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="v-input v-textarea theme--light v-text-field v-text-field--enclosed v-text-field--outlined primary--text"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span>
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label theme--light"
                      for="input-208"
                      style="left: 0px; position: absolute;"
                    >
                      Текст
                    </label>
                    <textarea
                      id="input-208"
                      rows="5"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots forms/timers Simple 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <span>
              100
            </span>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots icons User 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <svg
              aria-labelledby="user"
              class="icon icon-user"
              fill=""
              focusable="false"
              name="user"
              role="img"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xmlns:xlink="http://www.w3.org/1999/xlink"
              />
            </svg>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots loaders Block Loader 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="loader"
              style="--bg-color: transparent; --position: absolute; --z-index: 10;"
            >
              <div>
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  class="v-progress-circular v-progress-circular--indeterminate primary--text"
                  role="progressbar"
                  style="height: 50px; width: 50px;"
                >
                  <svg
                    style="transform: rotate(0deg);"
                    viewBox="21.27659574468085 21.27659574468085 42.5531914893617 42.5531914893617"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      class="v-progress-circular__overlay"
                      cx="42.5531914893617"
                      cy="42.5531914893617"
                      fill="transparent"
                      r="20"
                      stroke-dasharray="125.664"
                      stroke-dashoffset="125.66370614359172px"
                      stroke-width="2.553191489361702"
                    />
                  </svg>
                  <div
                    class="v-progress-circular__info"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Image storyshots sliders Swiper Slider 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-main"
      style="padding: 0px 0px 0px 0px;"
    >
      <div
        class="v-main__wrap"
      >
        <div
          class="row justify-center align-center"
        >
          <div
            class="col col-6"
          >
            <div
              class="swiper-container c-slider swiper-container-initialized swiper-container-horizontal swiper-container-free-mode"
            >
              <div
                class="swiper-wrapper"
                style="webkit-transition-duration: 0ms; transition-duration: 0ms; webkit-transform: translate3d(NaNpx, 0px, 0px); transform: translate3d(NaNpx, 0px, 0px);"
              >
                <div
                  class="swiper-slide"
                >
                  <div
                    class="v-image v-responsive theme--light"
                    style="height: 300px;"
                  >
                    <div
                      class="v-image__image v-image__image--preload v-image__image--cover"
                      style="background-position: center center;"
                    />
                    <div
                      class="v-responsive__content"
                    />
                  </div>
                </div>
                 
                <div
                  class="swiper-slide"
                >
                  <div
                    class="v-image v-responsive theme--light"
                    style="height: 300px;"
                  >
                    <div
                      class="v-image__image v-image__image--preload v-image__image--cover"
                      style="background-position: center center;"
                    />
                    <div
                      class="v-responsive__content"
                    />
                  </div>
                </div>
                 
                <div
                  class="swiper-slide"
                >
                  <div
                    class="v-image v-responsive theme--light"
                    style="height: 300px;"
                  >
                    <div
                      class="v-image__image v-image__image--preload v-image__image--cover"
                      style="background-position: center center;"
                    />
                    <div
                      class="v-responsive__content"
                    />
                  </div>
                </div>
                 
                <div
                  class="swiper-slide"
                >
                  <div
                    class="v-image v-responsive theme--light"
                    style="height: 300px;"
                  >
                    <div
                      class="v-image__image v-image__image--preload v-image__image--cover"
                      style="background-position: center center;"
                    />
                    <div
                      class="v-responsive__content"
                    />
                  </div>
                </div>
                  
              </div>
              <div
                class="swiper-button-prev"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_back
                </i>
              </div>
              <div
                class="swiper-button-next"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_forward
                </i>
              </div>
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="swiper-notification"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
